tdf#92788 - Middle Button on Mouse Paste Option Broken for X11

caused by commit 5333782d090a9e147c0c431f0f741863d1d8cf8e
"convert SETTINGS_ #defines to 'enum class'"

Change-Id: Id0c2738a61f73223f6c8716f04a619c8cb84c0a9