vcl/source/app/settings.cxx
@@ -2701,7 +2701,8 @@ ImplAllSettingsData::ImplAllSettingsData()
         maLocale( LANGUAGE_SYSTEM ),
         maUILocale( LANGUAGE_SYSTEM )
 {
-    mnWindowUpdate              = AllSettingsFlags::STYLE | AllSettingsFlags::MISC | AllSettingsFlags::LOCALE;
+    mnWindowUpdate              = AllSettingsFlags::MOUSE | AllSettingsFlags::STYLE |
+                                  AllSettingsFlags::MISC | AllSettingsFlags::LOCALE;
     mpLocaleDataWrapper         = NULL;
     mpUILocaleDataWrapper       = NULL;
     mpI18nHelper                = NULL;
@@ -2762,6 +2763,16 @@ AllSettingsFlags AllSettings::Update( AllSettingsFlags nFlags, const AllSettings
 {
 
     AllSettingsFlags nChangeFlags = AllSettingsFlags::NONE;
+
+    if ( nFlags & AllSettingsFlags::MOUSE )
+    {
+        if ( mxData->maMouseSettings != rSet.mxData->maMouseSettings )
+        {
+            CopyData();
+            mxData->maMouseSettings = rSet.mxData->maMouseSettings;
+            nChangeFlags |= AllSettingsFlags::MOUSE;
+        }
+    }
 
     if ( nFlags & AllSettingsFlags::STYLE )
     {
